; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-last_ip.c_update_ip_upd32.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-last_ip.c_update_ip_upd32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ptunit_result = type { i32 }
%struct.pt_last_ip = type { i32, i32, i32 }
%struct.pt_packet_ip = type { i32, i32 }

@pt_ipc_update_32 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @update_ip_upd32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_ip_upd32(i32 %0) #0 {
  %2 = alloca %struct.ptunit_result, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.pt_last_ip, align 4
  %5 = alloca %struct.pt_packet_ip, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = getelementptr inbounds %struct.pt_last_ip, %struct.pt_last_ip* %4, i32 0, i32 0
  store i32 1056, i32* %7, align 4
  %8 = load i32, i32* %3, align 4
  %9 = getelementptr inbounds %struct.pt_last_ip, %struct.pt_last_ip* %4, i32 0, i32 1
  store i32 %8, i32* %9, align 4
  %10 = getelementptr inbounds %struct.pt_last_ip, %struct.pt_last_ip* %4, i32 0, i32 2
  store i32 0, i32* %10, align 4
  %11 = load i32, i32* @pt_ipc_update_32, align 4
  %12 = getelementptr inbounds %struct.pt_packet_ip, %struct.pt_packet_ip* %5, i32 0, i32 1
  store i32 %11, i32* %12, align 4
  %13 = getelementptr inbounds %struct.pt_packet_ip, %struct.pt_packet_ip* %5, i32 0, i32 0
  store i32 49171, i32* %13, align 4
  %14 = call i32 @pt_last_ip_update_ip(%struct.pt_last_ip* %4, %struct.pt_packet_ip* %5, i32* null)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @ptu_int_eq(i32 %15, i32 0)
  %17 = getelementptr inbounds %struct.pt_last_ip, %struct.pt_last_ip* %4, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @ptu_uint_eq(i32 %18, i32 49171)
  %20 = getelementptr inbounds %struct.pt_last_ip, %struct.pt_last_ip* %4, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @ptu_uint_eq(i32 %21, i32 1)
  %23 = getelementptr inbounds %struct.pt_last_ip, %struct.pt_last_ip* %4, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @ptu_uint_eq(i32 %24, i32 0)
  %26 = call i32 (...) @ptu_passed()
  %27 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  store i32 %26, i32* %27, align 4
  %28 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  ret i32 %29
}

declare dso_local i32 @pt_last_ip_update_ip(%struct.pt_last_ip*, %struct.pt_packet_ip*, i32*) #1

declare dso_local i32 @ptu_int_eq(i32, i32) #1

declare dso_local i32 @ptu_uint_eq(i32, i32) #1

declare dso_local i32 @ptu_passed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
